# windows-computer-use-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SNAPSHOT.md  Windows Computer Use MCP 服务器.txt  build.js  cli.js  package-lock.json  package.json  project-snapshot-2026-04-21.md  project-snapshot-2026-04-23.md.txt  test_driver.js  test_driver.js.bak  tsconfig.json  进度.txt  项目总体总结4.21.18.49.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backups/: executor.ts.bak  test_workflow.js.bak  window.rs.bak
bundle/: index.js  win-cu-native.node
native/: Cargo.toml  index.win32-x64-msvc.node  package.json
native/src/: apps.rs  capture.rs  capture.rs.bak  clipboard.rs  hotkey.rs  input.rs  input.rs.bak  lib.rs  lib.rs.bak  uia.rs  window.rs  window.rs.bak
src/: executor.ts  index.ts  index.ts.bak  native-loader.ts  types.ts  types.ts.bak  utils.ts  utils.ts.bak
tests/: debug_screenshot.js  full_regression_driver.js  test_client.js  test_coordinate_probe.js  test_driver.js  test_hide_windows.js  test_single_screenshot.js  test_workflow.js
